--- a/src/cli.yml
+++ b/src/cli.yml
@@ -11,7 +11,70 @@ subcommands:
             help: Sets number of threads to use
             default_value: "4"
         - OUTPUT:
-            help: Sets the output file to use
+            help: Sets the work file to use
+            default_value: "timelock.work"
+            index: 1
+
+  - puzzle:
+      about: Convert work to a puzzle
+      args:
+        - INPUT:
+            help: Set the work file to use
+            default_value: "timelock.work"
+            index: 1
+        - OUTPUT:
+            help: Set the puzzle file to write
+            default_value: "timelock.puzzle"
+            index: 2
+
+  - solve:
+      about: Solve a puzzle
+      args:
+        - INPUT:
+            help: Set the puzzle file to use
+            default_value: "timelock.puzzle"
+            index: 1
+        - OUTPUT:
+            help: Set the work file to write
+            default_value: "timelock.work"
+            index: 2
+
+  - encrypt:
+      about: Encrypt a file
+      args:
+        - INPUT:
+            help: Set the file to encrypt
             required: true
+            index: 1
+        - OUTPUT:
+            help: Set where to write the encrypted file
+            required: true
+            index: 2
+        - work:
+            short: w
+            help: Set the work file to use
+            default_value: "timelock.work"
+
+  - decrypt:
+      about: Decrypt a file
+      args:
+        - INPUT:
+            help: Set the file to decrypt
+            required: true
+            index: 1
+        - OUTPUT:
+            help: Set where to write the decrypted file
+            required: true
+            index: 2
+        - work:
+            short: w
+            help: Set the work file to use
+            default_value: "timelock.work"
+
+  - info:
+      about: Determine encryption rate and predict the difficulty of the current work file
+      args:
+        - INPUT:
+            help: Set the work file to use
             default_value: "timelock.work"
             index: 1
